# CG_Learning

Code/: CMakeLists.txt  main.cpp
Code/Reflection/: MetaObject.h  STD.h
Code/assets/: CMakeLists.txt  SourceFinder.cpp  SourceFinder.h
Code/assets/ModelSource/base/: cube.fbx
Code/assets/ShaderSource/: base.frag  base.vert  bbox.frag  bbox.vert  model.frag  model.vert  post.frag  post.vert  shadow.frag  shadow.vert
Code/engine/: CMakeLists.txt
Code/engine/Private/: AABoundingBox.cpp  Camera.cpp  Mesh.cpp  RayCast.cpp  RenderTexture.cpp  Shader.cpp  TaskGraph.cpp  Transform.cpp
Code/engine/Public/: AABoundingBox.h  Camera.cpp  Camera.h  Mesh.h  Model.h  RayCast.h  RenderTexture.h  Shader.h  TaskGraph.h  Transform.h
Code/glad_module/: CMakeLists.txt
Code/glad_module/include/glad/: glad.h
Code/glad_module/src/: glad.c
Code/launcher/Private/: launcherRegisterFunc.cpp  main.cpp
Code/launcher/Public/: MyClass.h  utils.h
Code/shader/: CMakeLists.txt  ShaderSource.cpp  ShaderSource.h
Code/shader/ShaderSource/: base.frag  base.vert
